--- a/style.css
+++ b/style.css
@@ -6,20 +6,32 @@ body {
     font: 17px/23px Arial, Helvetica, sans-serif;
     text-align: justify;
 }
+
 .foto {
     padding: 27px;
     position: absolute;
     left: 60%;
 }
+
 .cv {
     position: absolute;
     left: 25%;
     right: 25%;
 }
+
 hr {
     background-color: black;
     height: 1px;
 }
-p { 
+
+p {
     text-indent: 2.4em;
+}
+
+.footer {
+    text-align: center;
+}
+
+.top {
+    margin-top: 25px;
 }
